--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#">ES</a>
             <a href="#">CA</a>
             <a href="#">EN</a>
+            <a href="#">JA</a>
         </div>
     </div>
     <a href="index.html">
