--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Inicio · La Galería Ecléctica</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.awesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -15,16 +15,13 @@
             <a href="#">ES</a>
             <a href="#">CA</a>
             <a href="#">EN</a>
-            <a href="#">JA</a>
         </div>
     </div>
     <a href="index.html">
-        <img src="assets/img/logo.png"/>
+        <img alt="logo" src="assets/img/logo.png"/>
     </a>
     <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNavAltMarkup">
             <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Colección</a>
@@ -42,14 +39,14 @@
         <div class="fila">
             <div class="dos-columnas">
                 <a href="expo-detalle.html">
-                    <img src="assets/img/expo-cezanne.jpg"/>
+                    <img alt="Cuadro que representa a 4 personas jugando a las cartas y fumando pipa, la foto tiene lugar hace aproximadamente un siglo" src="assets/img/expo-cezanne.jpg"/>
                 </a>
                 <a href="expo-detalle.html"><h3>Impresiones </h3></a>
                 <p>Hasta abril de 2019</p>
             </div>
             <div class="dos-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-caravaggio.jpg"/>
+                    <img alt="Cuadro que representa a un soldado incriminando a un hombre mientras mujer observa" src="assets/img/expo-caravaggio.jpg"/>
                 </a>
                 <a href="#"> <h3>Caravaggio: el pintor del claroscuro </h3></a>
                 <p>Hasta mayo de 2019</p>
@@ -61,17 +58,17 @@
         <h2> Exposiciones actuales</h2>
         <div class="fila">
             <div class="tres-columnas">
-                <img src="assets/img/activ-guide.jpg"/>
+                <img alt="Imagen que captura el interior de un museo" src="assets/img/activ-guide.jpg"/>
                 <h3>Visita guiada a la colección de LAGaEC </h3>
                 <p>Jueves a las 12 h. Sábados a las 10 h. Actividad gratuita con inscripción previa</p>
             </div>
             <div class="tres-columnas">
-                <img src="assets/img/activ-arts.jpg"/>
+                <img alt="la imagen muestra una situacion confusa de un escenario" src="assets/img/activ-arts.jpg"/>
                 <h3>Experiencias creativas </h3>
                 <p>Del 2 de enero al 25 de junio de 2019. Actividad gratuita con inscripción previa</p>
             </div>
             <div class="tres-columnas">
-                <img src="assets/img/activ-conf.jpg"/>
+                <img alt="La imagen muestra un libro sobre una butaca con un teatro de fondo" src="assets/img/activ-conf.jpg"/>
                 <h3>Cita con los expertos</h3>
                 <p>Del 7 de enero al 1 de julio de 2019 (cada primer lunes de mes). Conferencias gratuitas con inscripción previa</p>
             </div>
@@ -128,13 +125,13 @@
 
         <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
-            <div class="form-group">
+            <label class="form-group">
                 <input type="email" class="form-control" placeholder="Enter email">
-            </div>
-            <div class="form-group form-check">
+            </label>
+            <label class="form-group form-check">
                 <input type="checkbox" class="form-check-input">
                 <label class="form-check-label">Acepto la <a href="#">Política de privacidad </a></label>
-            </div>
+            </label>
             <button type="submit" class="btn btn-secondary">Registrarme</button>
         </form>
         <a href="index.html" class="logo">
