--- a/index.html
+++ b/index.html
@@ -117,15 +117,16 @@
             08018 Barcelona
         </a>
         <div class="rrss">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube-square"></i></a>
+            <a href="#"><i class="fab fa-facebook-square">Facebook</i></a>
+            <a href="#"><i class="fab fa-twitter-square">Twitter</i></a>
+            <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+            <a href="#"><i class="fab fa-youtube-square">Youtube</i></a>
         </div>
 
         <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
             <label class="form-group">
+                <label>Introduce Email</label>
                 <input type="email" class="form-control" placeholder="Enter email">
             </label>
             <label class="form-group form-check">
@@ -135,7 +136,7 @@
             <button type="submit" class="btn btn-secondary">Registrarme</button>
         </form>
         <a href="index.html" class="logo">
-            <img src="assets/img/logo.png"/>
+            <img alt="Logo"src="assets/img/logo.png"/>
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
             <div class="navbar-nav">
