--- a/donar.html
+++ b/donar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <title>Donar · La Galería Ecléctica</title>
@@ -18,11 +18,11 @@
             </div>
         </div>
         <a href="index.html">
-            <img src="assets/img/logo.png"/>
+            <img alt="logo" src="assets/img/logo.png"/>
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon">MENU</span>
             </button>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav">
@@ -98,57 +98,69 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label>Otra cantidad</label>
+                            <label>Otra cantidad
                             <input type="password" class="form-control" placeholder="Escriba otro importe">
+                            </label>
                         </div>
                         <hr>
                         <h3>Datos de facturación</h3>
                         <div class="form-group">
-                            <label>Email</label>
+                            <label>Email
                             <input type="email" class="form-control" placeholder="Escribe tu email">
+                            
                             <small class="form-text text-muted">Nunca compartiremos su correo electrónico con nadie.</small>
+                            </label>
                         </div>
                         <div class="form-group">
-                            <label>Nombre </label>
+                            <label>Nombre 
                             <input type="text" class="form-control" placeholder="Escribe tu nombre ">
+                            </label>
                         </div>
                         <div class="form-group">
-                            <label>Apellidos </label>
+                            <label>Apellidos 
                             <input type="text" class="form-control" placeholder="Tu apellidos">
+                            </label>
                         </div>
 
                         <div class="form-group">
-                            <label>Dirección postal </label>
+                            <label>Dirección postal 
                             <input type="text" class="form-control" placeholder="Tu dirección postal">
                             <small class="form-text text-muted">Nunca compartiremos su dirección con nadie.</small>
+                        </label>
                         </div>
 
                         <div class="form-group">
-                            <label>Teléfono </label>
+                            <label>Teléfono 
                             <input type="tel" class="form-control" placeholder="Teléfono">
                             <small class="form-text text-muted">Nunca compartiremos su teléfono con nadie más.</small>
+                            </label>
                         </div>
                         <hr>
                         <h3>Datos de pago</h3>
                         <div class="form-group">
-                            <label>Número tarjeta</label>
+                            <label>Número tarjeta
                             <input type="number" class="form-control" placeholder="Número de tarjeta">
+                            </label>
                         </div>
                         <div class="form-group">
-                            <label>Data de expiración</label>
+                            <label>Data de expiración
                             <input type="text" class="form-control" placeholder="MM/AA">
+                            </label>
                         </div>
                         <div class="form-group">
-                            <label>Código de verificación</label>
+                            <label>Código de verificación
                             <input type="number" class="form-control" placeholder="CCV">
+                            </label>
                         </div>
                         <div class="custom-control custom-checkbox">
+                            <label class="custom-control-label"></label>
                             <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label">Hago este donativo de manera anónima</label>
+                            Hago este donativo de manera anónima</label>
                         </div>
                         <div class="custom-control custom-checkbox">
+                            <label class="custom-control-label"></label>
                             <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label">Acepto expresamente la <a href="#">política de protección de datos </a></label>
+                            Acepto expresamente la <a href="#">política de protección de datos </a></label>
                         </div>
                         <button type="submit" class="btn btn-secondary">Enviar</button>
                     </form>
@@ -166,25 +178,28 @@
                 08018 Barcelona
             </a>
             <div class="rrss">
-                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                <a href="#"><i class="fab fa-twitter-square"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube-square"></i></a>
+                <a href="#"><i class="fab fa-facebook-square">Facebook</i></a>
+                <a href="#"><i class="fab fa-twitter-square">Twitter</i></a>
+                <a href="#"><i class="fab fa-instagram">Instagram</i></a>
+                <a href="#"><i class="fab fa-youtube-square">Youtube</i></a>
             </div>
 
             <form>
                 <h4>Suscríbete a nuestra Newsletter</h4>
                 <div class="form-group">
+                    <label>
                     <input type="email" class="form-control" placeholder="Enter email">
+                    </label>
                 </div>
                 <div class="form-group form-check">
+                    <label class="form-check-label">
                     <input type="checkbox" class="form-check-input">
-                    <label class="form-check-label">Acepto la <a href="#">Política de privacidad </a></label>
+                    Acepto la <a href="#">Política de privacidad </a></label>
                 </div>
                 <button type="submit" class="btn btn-secondary">Registrarme</button>
             </form>
             <a href="index.html" class="logo">
-                <img src="assets/img/logo.png"/>
+                <img alt="logo en la zona inferior" src="assets/img/logo.png"/>
             </a>
             <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
                 <div class="navbar-nav">
