--- a/donar.html
+++ b/donar.html
@@ -74,14 +74,14 @@
                         <h3>Cantidad del donativo (EUR)</h3>
 
                         <div class="form-check-inline">
-                            <input class="form-check-input" type="radio" name="unaVez" id="unaVez" value="option1" checked>
                             <label class="form-check-label" for="unaVez">
+                            <input class="form-check-input" type="radio" name="unaVez" id="unaVez" value="option1" checked>
                                 Una única vez
                             </label>
                         </div>
                         <div class="form-check-inline">
-                            <input class="form-check-input" type="radio" name="mensual" id="mensual" value="option2">
                             <label class="form-check-label" for="mensual">
+                            <input class="form-check-input" type="radio" name="mensual" id="mensual" value="option2">
                                 Mensual
                             </label>
                         </div>
@@ -153,12 +153,12 @@
                             </label>
                         </div>
                         <div class="custom-control custom-checkbox">
-                            <label class="custom-control-label"></label>
+                            <label class="custom-control-label">
                             <input type="checkbox" class="custom-control-input">
                             Hago este donativo de manera anónima</label>
                         </div>
                         <div class="custom-control custom-checkbox">
-                            <label class="custom-control-label"></label>
+                            <label class="custom-control-label">
                             <input type="checkbox" class="custom-control-input">
                             Acepto expresamente la <a href="#">política de protección de datos </a></label>
                         </div>
@@ -188,6 +188,7 @@
                 <h4>Suscríbete a nuestra Newsletter</h4>
                 <div class="form-group">
                     <label>
+                        Inserte el correo
                     <input type="email" class="form-control" placeholder="Enter email">
                     </label>
                 </div>
