--- a/donar.html
+++ b/donar.html
@@ -155,12 +155,14 @@
                         <div class="custom-control custom-checkbox">
                             <label class="custom-control-label">
                             <input type="checkbox" class="custom-control-input">
-                            Hago este donativo de manera anónima</label>
+                            Hago este donativo de manera anónima
+                            </label>
                         </div>
                         <div class="custom-control custom-checkbox">
                             <label class="custom-control-label">
                             <input type="checkbox" class="custom-control-input">
-                            Acepto expresamente la <a href="#">política de protección de datos </a></label>
+                            Acepto expresamente la <a href="#">política de protección de datos </a>
+                            </label>
                         </div>
                         <button type="submit" class="btn btn-secondary">Enviar</button>
                     </form>
