--- a/expo-detalle.html
+++ b/expo-detalle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ES">
     <head>
         <meta charset="UTF-8">
         <title>Exposiciones · La Galería Ecléctica</title>
@@ -20,11 +20,11 @@
                 </div>
             </div>
             <a href="index.html">
-                <img src="assets/img/logo.png" />
+                <img alt="logo" src="assets/img/logo.png" />
             </a>
             <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon">Menu</span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
@@ -122,24 +122,27 @@
                     08018 Barcelona
                 </a>
                 <div class="rrss">
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#"><i class="fab fa-twitter-square"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube-square"></i></a>
+                    <a href="#"><i class="fab fa-facebook-square">Facebook</i></a>
+                    <a href="#"><i class="fab fa-twitter-square">Twitter</i></a>
+                    <a href="#"><i class="fab fa-instagram">Instagram</i></a>
+                    <a href="#"><i class="fab fa-youtube-square">Youtube</i></a>
                 </div>
                 <form>
                     <h4>Suscríbete a nuestra Newsletter</h4>
                     <div class="form-group">
+                        <label>
                         <input type="email" class="form-control" placeholder="Enter email">
+                        </label>
                     </div>
                     <div class="form-group form-check">
+                        <label>
                         <input type="checkbox" class="form-check-input">
-                        <label>Acepto la <a href="#">Política de privacidad </a></label>
+                        Acepto la <a href="#">Política de privacidad </a></label>
                     </div>
                     <button type="submit" class="btn btn-secondary">Registrarme</button>
                 </form>
                 <a href="index.html" class="logo">
-                    <img src="assets/img/logo.png"/>
+                    <img alt="logo zona inferior" src="assets/img/logo.png"/>
                 </a>
                 <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
                     <div class="navbar-nav">
