--- a/expo-detalle.html
+++ b/expo-detalle.html
@@ -131,6 +131,7 @@
                     <h4>Suscríbete a nuestra Newsletter</h4>
                     <div class="form-group">
                         <label>
+                            Introduce tu correo
                         <input type="email" class="form-control" placeholder="Enter email">
                         </label>
                     </div>
