--- a/exposiciones.html
+++ b/exposiciones.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <title>Exposiciones · La Galería Ecléctica</title>
@@ -20,7 +20,7 @@
         </div>
     </div>
     <a href="index.html">
-        <img src="assets/img/logo.png" />
+        <img alt="Logo" src="assets/img/logo.png" />
     </a>
     <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
@@ -56,14 +56,14 @@
         <div class="fila align-izquierda">
             <div class="cuatro-columnas">
                 <a href="expo-detalle.html">
-                    <img src="assets/img/expo-cezanne.jpg" />
+                    <img alt= "Cuadro que representa a 4 personas jugando a las cartas y fumando pipa" src="assets/img/expo-cezanne.jpg" />
                 </a>
                 <p>De 02/12/2018 a 17/04/2019</p>
                 <a href="expo-detalle.html"><h3>Impresiones </h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-caravaggio.jpg"/>
+                    <img alt="Cuadro que representa a un soldado incriminando a un hombre mientras mujer observa" src="assets/img/expo-caravaggio.jpg"/>
                 </a>
                 <p>De 03/12/2018 a 17/05/2019</p>
                 <a href="#"> <h3>Caravaggio: el pintor del claroscuro </h3></a>
@@ -76,21 +76,21 @@
         <div class="fila align-izquierda">
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-terracota.jpg"/>
+                    <img alt="Muestra una imagen la cual presenta 5 estatuillas de terracota" src="assets/img/expo-terracota.jpg"/>
                 </a>
                 <p>De 18/05/2019 a 18/06/2019</p>
                 <a href="#"> <h3>Terracotas </h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-cezanne.jpg"/>
+                    <img alt="Cuadro que representa a 4 personas jugando a las cartas y fumando pipa" src="assets/img/expo-cezanne.jpg"/>
                 </a>
                 <p>De 18/05/2019 a 17/07/2019</p>
                 <a href="#"> <h3>Cézanne: el padre de la modernidad </h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-storytelling.jpg"/>
+                    <img alt="Cuadro griego que muestra muchas personas en la calzada de la grecia antigua" src="assets/img/expo-storytelling.jpg"/>
                 </a>
                 <p>De 19/06/2019 a 20/09/2019 </p>
                 <a href="#"> <h3>Storytelling, los artistas comparten historias</h3></a>
@@ -103,31 +103,31 @@
         <div class="fila align-izquierda">
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-rostro-humano.jpg" />
+                    <img alt="Cuadro que muestra una mujer mirando hacia la derecha" src="assets/img/expo-rostro-humano.jpg" />
                 </a>
                 <a href="#"> <h3>El rostro humano en el arte</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-vangogh.jpg" />
+                    <img alt="Cuadro de Van Gogh, este tiene un sombrero amarillo" src="assets/img/expo-vangogh.jpg" />
                 </a>
                 <a href="#"> <h3>El color, esencia del arte</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-pintores-holandeses.jpg"/>
+                    <img alt="Cuadro que muestra a una mujer mirando por una ventana mientra sostiene una tetera" src="assets/img/expo-pintores-holandeses.jpg"/>
                 </a>
                 <a href="#"> <h3>Pintores holandeses</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-goya.jpg" />
+                    <img alt="Cuadro de una persona apoyada sobre una mesa y buhos sobre el" src="assets/img/expo-goya.jpg" />
                 </a>
                 <a href="#"> <h3>Goya, el sueño de la razón...</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-manuscritos.jpg" />
+                    <img alt="Imagen que muestra un libro con diseños de un barco" src="assets/img/expo-manuscritos.jpg" />
                 </a>
                 <a href="#"> <h3>Manuscritos</h3></a>
             </div>
@@ -147,16 +147,19 @@
             08018 Barcelona
         </a>
         <div class="rrss">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube-square"></i></a>
+            <a href="#"><i class="fab fa-facebook-square">Facebook</i></a>
+            <a href="#"><i class="fab fa-twitter-square">Twitter</i></a>
+            <a href="#"><i class="fab fa-instagram">Instagram</i></a>
+            <a href="#"><i class="fab fa-youtube-square">Youtube</i></a>
         </div>
 
         <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
             <div class="form-group">
+                <label>
+                Introduce tu correo
                 <input type="email" class="form-control" id="exampleInputEmail1"  placeholder="Enter email">
+                </label>
             </div>
             <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
