--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
         <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
             <label class="form-group">
-                <label>Introduce Email</label>
-                <input type="email" class="form-control" placeholder="Enter email">
-            </label>
-            <label class="form-group form-check">
-                <input type="checkbox" class="form-check-input">
-                <label class="form-check-label">Acepto la <a href="#">Política de privacidad </a></label>
-            </label>
+                <label for="email">Introduce Email</label>
+<input type="email" class="form-control" id="email" name="email" placeholder="Enter email" alt="Campo de entrada de correo electrónico">
+
+<label class="form-check-label">
+    <input type="checkbox" class="form-check-input" id="privacy-policy" name="privacy-policy">
+    Acepto la <a href="#">Política de privacidad</a>
+</label>
             <button type="submit" class="btn btn-secondary">Registrarme</button>
         </form>
         <a href="index.html" class="logo">
