--- a/expo-detalle.html
+++ b/expo-detalle.html
@@ -46,7 +46,7 @@
             <section class="detalle-cabecera">
                 <div class="container">
                     <h1>Impresiones</h1>
-                    <h2> Mirar a Degas: la captura del instante</h2>43
+                    <h2 class="fraseWhite"> Mirar a Degas: la captura del instante</h2>43
                 </div>
             </section>
 
